# pyroscope-operators

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SPREAD_MIGRATION.md  itest.sh  pyproject.toml  tox.ini
.github/: renovate-config.js  renovate.json5
.github/workflows/: coordinator-pull-request.yaml  coordinator-quality-gates.yaml  coordinator-release.yaml  coordinator-update-libs.yaml  integration-tests.yaml  promote.yaml  pull-request.yaml  quality-gates.yaml  release.yaml  solution-tests.yaml  spread-integration.yaml  tiobe-scan.yaml  update-libs.yaml  worker-pull-request.yaml  worker-quality-gates.yaml  worker-release.yaml  worker-update-libs.yaml
coordinator/: .gitignore  README.md  charmcraft.yaml  pyproject.toml  spread.yaml  tox.ini
coordinator/scripts/: pack-worker.sh  profilegen.py
coordinator/spread/: .extension
features/: catalogue.feature  profiling-tls.feature  profiling-with-collector-tls.feature  profiling-with-collector.feature  profiling.feature  retention.feature
probes/: cluster-consistency.yaml
scripts/: otlp_adapter.py  profilegen.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: integration
worker/: README.md  charmcraft.yaml  pyproject.toml  tox.ini
worker/src/: charm.py  pyroscope.py
worker/terraform/: README.md  main.tf  outputs.tf  variables.tf
worker/tests/integration/: conftest.py  helpers.py  test_scaling_monolithic.py  test_worker_charm.py
worker/tests/interface/: conftest.py
worker/tests/unit/: conftest.py  helpers.py  test_charm.py  test_charm_statuses.py  test_pebble_plan.py
(+90 files in other folders)
